:art: height overflow at 1024 fixed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -928,7 +928,8 @@ body {
     // grid-template-columns: 1fr;
     //  width: min-content;
     // width: 645px;
-    width: fit-content;
+    // width: fit-content;
+    width: 540px;
     // min-width: min-content;
   }
 
